Melhorias: - Swagger atualizado - Adição dos prices no resultado de tran. variavel - Adição do recurso de listagem de indexies
